# IntelliChat

./: LICENSE  README.md  index.html  package-lock.json  package.json  update.json
src/: App.vue  main.js  modeSwitcher.js  popupOverlay.js  settingsPopup.js  styles.css  themePopup.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
